--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "@supabase/supabase-js": "^2.84.0",
     "@tanstack/react-query": "^5.90.10",
     "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.554.0",
     "next": "^15.1.0",
+    "openai": "^6.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "2.x",
