Adjusing .env variable names

--- a/frontend/.env.base-mainnet.example
+++ b/frontend/.env.base-mainnet.example
@@ -8,8 +8,8 @@ OPENAI_API_KEY=sk-...your-openai-key-here
 OPENAI_MODEL=gpt-4-turbo-preview
 
 # Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_KEY=your-service-role-key-here
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_KEY=your-service-key-here
 
 # Agent Wallet Configuration
 AGENT_PRIVATE_KEY=0x...your-agent-private-key
